k8s/ingress-nginx/master-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-ingress-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /     
    #nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.motbay.ga' ) {
        rewrite ^ https://motbay.ga$request_uri permanent;
        }
spec:
  rules:
  - host: www.motbay.ga
    http:
      paths:
      - backend:
          service:
            name: app-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: motbay.ga
    http:
      paths:
      - backend:
          service:
            name: app-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.motbay.ga
    - motbay.ga
    secretName: motbay.ga-certificate-secret
